syntax = "proto3";

package xray.app.router;
option csharp_namespace = "Xray.App.Router";
option go_package = "github.com/xtls/xray-core/app/router";
option java_package = "com.xray.app.router";
option java_multiple_files = true;

message RoutingRule {
  oneof target_tag {
    // Tag of outbound that this rule is pointing to.
    string tag = 1;
  }

  repeated string inbound_tag = 8;
  repeated string protocol = 9;
}

message Config {
  repeated RoutingRule rule = 2;
}
